src/com/laneve/bytecode/parser/BytecodeParser.java
// Generated from Bytecode.g4 by ANTLR 4.4
package com.laneve.bytecode.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BytecodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__117=1, T__116=2, T__115=3, T__114=4, T__113=5, T__112=6, T__111=7, 
		T__110=8, T__109=9, T__108=10, T__107=11, T__106=12, T__105=13, T__104=14, 
		T__103=15, T__102=16, T__101=17, T__100=18, T__99=19, T__98=20, T__97=21, 
		T__96=22, T__95=23, T__94=24, T__93=25, T__92=26, T__91=27, T__90=28, 
		T__89=29, T__88=30, T__87=31, T__86=32, T__85=33, T__84=34, T__83=35, 
		T__82=36, T__81=37, T__80=38, T__79=39, T__78=40, T__77=41, T__76=42, 
		T__75=43, T__74=44, T__73=45, T__72=46, T__71=47, T__70=48, T__69=49, 
		T__68=50, T__67=51, T__66=52, T__65=53, T__64=54, T__63=55, T__62=56, 
		T__61=57, T__60=58, T__59=59, T__58=60, T__57=61, T__56=62, T__55=63, 
		T__54=64, T__53=65, T__52=66, T__51=67, T__50=68, T__49=69, T__48=70, 
		T__47=71, T__46=72, T__45=73, T__44=74, T__43=75, T__42=76, T__41=77, 
		T__40=78, T__39=79, T__38=80, T__37=81, T__36=82, T__35=83, T__34=84, 
		T__33=85, T__32=86, T__31=87, T__30=88, T__29=89, T__28=90, T__27=91, 
		T__26=92, T__25=93, T__24=94, T__23=95, T__22=96, T__21=97, T__20=98, 
		T__19=99, T__18=100, T__17=101, T__16=102, T__15=103, T__14=104, T__13=105, 
		T__12=106, T__11=107, T__10=108, T__9=109, T__8=110, T__7=111, T__6=112, 
		T__5=113, T__4=114, T__3=115, T__2=116, T__1=117, T__0=118, CLASS=119, 
		ENUM=120, INDEX=121, ALOAD=122, ILOAD=123, ISTORE=124, ASTORE=125, REFNUM=126, 
		NAT=127, INT=128, DEC=129, THIS=130, STRING=131, Identifier=132, CLASSFILE=133, 
		LAST=134, MD5=135, COMPILED=136, ENCLOSINGMETHOD=137, SOURCE=138, MINOR=139, 
		MAJOR=140, FLAGS=141, CONSTANTVALUE=142, DESCRIPTOR=143, EXCEPTIONTABLE=144, 
		FROMTO=145, FROMTONUMBERS=146, LINENUMBERTABLE=147, LINENUMBERTABLECONTENT=148, 
		LOCALVARIABLETABLE=149, LOCALVARIABLECONTENT=150, LOCALVARIABLELINE=151, 
		STACKMAPTABLE=152, FRAMETYPE=153, OFFSETDELTA=154, LOCALS=155, STACK=156, 
		STACKLOCALARGSSIZE=157, EXCEPTION=158, THROWS=159, WS=160, COMMENT=161, 
		LINE_COMMENT=162;
	public static final String[] tokenNames = {
		"<INVALID>", "'Float'", "'iconst_1'", "'dup'", "'char'", "'if_acmpeq'", 
		"'athrow'", "'^'", "'aaload'", "'if_icmple'", "'int'", "','", "'throws'", 
		"'if_icmplt'", "'iconst_2'", "'abstract'", "'boolean'", "'monitorexit'", 
		"'long'", "'ireturn'", "'<'", "']'", "'protected'", "'ifne'", "'pop'", 
		"'putstatic'", "'ldc2_w'", "'if_icmpeq'", "'strictfp'", "'native'", "'iconst_3'", 
		"'of'", "'Long'", "';'", "'Integer'", "'}'", "'iinc'", "'if_icmpge'", 
		"'''", "'monitorenter'", "'areturn'", "'invokespecial'", "'l'", "'bipush'", 
		"'if_icmpgt'", "'ifnonnull'", "'Utf8'", "'Fieldref'", "'getstatic'", "'aconst_null'", 
		"'aload'", "'istore'", "'iconst_4'", "'putfield'", "':'", "'['", "'NameAndType'", 
		"'public'", "'!'", "')'", "'isub'", "'imul'", "'ifge'", "'private'", "'iload'", 
		"'iconst_5'", "'new'", "'float'", "'ifnull'", "'ifeq'", "'void'", "'{'", 
		"'byte'", "'= '", "'{}'", "'irem'", "'('", "'if_icmpne'", "'aastore'", 
		"'astore'", "'idiv'", "'implements'", "'Code:'", "'ifgt'", "'iconst_m1'", 
		"'ifle'", "'static'", "'iadd'", "'ldc_w'", "'anewarray'", "'final'", "'Methodref'", 
		"'invokestatic'", "'/'", "'lmul'", "'f2l'", "'return'", "'\\'", "'goto'", 
		"'Double'", "'Class'", "'extends'", "'?'", "'short'", "'double'", "'synchronized'", 
		"'InterfaceMethodref'", "'.'", "'iflt'", "'iconst_0'", "'ldc'", "'if_acmpne'", 
		"'getfield'", "'Constant pool:'", "'invokevirtual'", "'>'", "'%'", "'InnerClasses:'", 
		"'-'", "'class'", "'enum'", "INDEX", "ALOAD", "ILOAD", "ISTORE", "ASTORE", 
		"REFNUM", "NAT", "INT", "DEC", "'this'", "'String'", "Identifier", "CLASSFILE", 
		"LAST", "MD5", "COMPILED", "ENCLOSINGMETHOD", "SOURCE", "MINOR", "MAJOR", 
		"FLAGS", "CONSTANTVALUE", "DESCRIPTOR", "EXCEPTIONTABLE", "FROMTO", "FROMTONUMBERS", 
		"LINENUMBERTABLE", "LINENUMBERTABLECONTENT", "LOCALVARIABLETABLE", "LOCALVARIABLECONTENT", 
		"LOCALVARIABLELINE", "STACKMAPTABLE", "FRAMETYPE", "OFFSETDELTA", "LOCALS", 
		"STACK", "STACKLOCALARGSSIZE", "EXCEPTION", "THROWS", "WS", "COMMENT", 
		"LINE_COMMENT"
	};
	public static final int
		RULE_classfile = 0, RULE_classDec = 1, RULE_classModifier = 2, RULE_innerClass = 3, 
		RULE_fields = 4, RULE_fieldModifier = 5, RULE_fieldName = 6, RULE_constantPool = 7, 
		RULE_tableEntries = 8, RULE_tableEntry = 9, RULE_constantAndInfo = 10, 
		RULE_methodDeclaration = 11, RULE_methodModifier = 12, RULE_methodHeader = 13, 
		RULE_result = 14, RULE_type = 15, RULE_primitiveType = 16, RULE_numericType = 17, 
		RULE_integralType = 18, RULE_floatingPointType = 19, RULE_referenceType = 20, 
		RULE_packageAndClassName = 21, RULE_methodDeclarator = 22, RULE_methodName = 23, 
		RULE_formalParameters = 24, RULE_formalParameter = 25, RULE_throws_ = 26, 
		RULE_exceptionTypeList = 27, RULE_exceptionType = 28, RULE_methodBody = 29, 
		RULE_instructionLine = 30, RULE_instruction = 31, RULE_ref = 32, RULE_num = 33, 
		RULE_identifierExtended = 34;
	public static final String[] ruleNames = {
		"classfile", "classDec", "classModifier", "innerClass", "fields", "fieldModifier", 
		"fieldName", "constantPool", "tableEntries", "tableEntry", "constantAndInfo", 
		"methodDeclaration", "methodModifier", "methodHeader", "result", "type", 
		"primitiveType", "numericType", "integralType", "floatingPointType", "referenceType", 
		"packageAndClassName", "methodDeclarator", "methodName", "formalParameters", 
		"formalParameter", "throws_", "exceptionTypeList", "exceptionType", "methodBody", 
		"instructionLine", "instruction", "ref", "num", "identifierExtended"
	};

	@Override
	public String getGrammarFileName() { return "Bytecode.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BytecodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClassfileContext extends ParserRuleContext {
		public InnerClassContext innerClass(int i) {
			return getRuleContext(InnerClassContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public TerminalNode EOF() { return getToken(BytecodeParser.EOF, 0); }
		public ConstantPoolContext constantPool() {
			return getRuleContext(ConstantPoolContext.class,0);
		}
		public List<FieldsContext> fields() {
			return getRuleContexts(FieldsContext.class);
		}
		public List<InnerClassContext> innerClass() {
			return getRuleContexts(InnerClassContext.class);
		}
		public ClassDecContext classDec() {
			return getRuleContext(ClassDecContext.class,0);
		}
		public FieldsContext fields(int i) {
			return getRuleContext(FieldsContext.class,i);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classfile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassfileContext classfile() throws RecognitionException {
		ClassfileContext _localctx = new ClassfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classfile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(70); classDec();
			setState(72);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(71); innerClass();
				}
			}

			setState(74); constantPool();
			setState(75); match(T__47);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76); fields();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(83); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82); methodDeclaration();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(87); match(T__83);
			setState(89);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(88); innerClass();
				}
			}

			}
			setState(91); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDecContext extends ParserRuleContext {
		public PackageAndClassNameContext ilmio;
		public ClassModifierContext classModifier() {
			return getRuleContext(ClassModifierContext.class,0);
		}
		public TerminalNode ENUM() { return getToken(BytecodeParser.ENUM, 0); }
		public PackageAndClassNameContext packageAndClassName(int i) {
			return getRuleContext(PackageAndClassNameContext.class,i);
		}
		public TerminalNode CLASS() { return getToken(BytecodeParser.CLASS, 0); }
		public List<PackageAndClassNameContext> packageAndClassName() {
			return getRuleContexts(PackageAndClassNameContext.class);
		}
		public ClassDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDecContext classDec() throws RecognitionException {
		ClassDecContext _localctx = new ClassDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if (_la==T__103 || _la==T__61 || _la==T__32 || _la==T__28) {
				{
				setState(93); classModifier();
				}
			}

			setState(96);
			_la = _input.LA(1);
			if ( !(_la==CLASS || _la==ENUM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(97); ((ClassDecContext)_localctx).ilmio = packageAndClassName(0);
			setState(100);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(98); match(T__17);
				setState(99); packageAndClassName(0);
				}
			}

			setState(112);
			_la = _input.LA(1);
			if (_la==T__37) {
				{
				{
				setState(102); match(T__37);
				setState(103); packageAndClassName(0);
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__107) {
					{
					{
					setState(105); match(T__107);
					setState(106); packageAndClassName(0);
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassModifierContext extends ParserRuleContext {
		public ClassModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classModifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitClassModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassModifierContext classModifier() throws RecognitionException {
		ClassModifierContext _localctx = new ClassModifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(_la==T__103 || _la==T__61 || _la==T__32 || _la==T__28) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InnerClassContext extends ParserRuleContext {
		public List<RefContext> ref() {
			return getRuleContexts(RefContext.class);
		}
		public RefContext ref(int i) {
			return getRuleContext(RefContext.class,i);
		}
		public InnerClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitInnerClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerClassContext innerClass() throws RecognitionException {
		InnerClassContext _localctx = new InnerClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_innerClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(T__1);
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__61 || _la==T__32) {
						{
						{
						setState(117);
						_la = _input.LA(1);
						if ( !(_la==T__61 || _la==T__32) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						}
						}
						setState(122);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(126); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						setState(126);
						switch (_input.LA(1)) {
						case T__45:
							{
							setState(123); match(T__45);
							}
							break;
						case REFNUM:
							{
							setState(124); ref();
							}
							break;
						case T__87:
							{
							setState(125); match(T__87);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						setState(128); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__87 || _la==T__45 || _la==REFNUM );
					}
					break;
				case 2:
					{
					setState(130); ref();
					}
					break;
				}
				setState(133); match(T__85);
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__87 || _la==T__61 || ((((_la - 73)) & ~0x3f) == 0 && ((1L << (_la - 73)) & ((1L << (T__45 - 73)) | (1L << (T__32 - 73)) | (1L << (REFNUM - 73)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public List<FieldModifierContext> fieldModifier() {
			return getRuleContexts(FieldModifierContext.class);
		}
		public FieldNameContext fieldName() {
			return getRuleContext(FieldNameContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FieldModifierContext fieldModifier(int i) {
			return getRuleContext(FieldModifierContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__103) | (1L << T__96) | (1L << T__61) | (1L << T__55))) != 0) || _la==T__32 || _la==T__28) {
				{
				{
				setState(138); fieldModifier();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144); type();
			setState(145); fieldName();
			setState(146); match(T__85);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldModifierContext extends ParserRuleContext {
		public ClassModifierContext classModifier() {
			return getRuleContext(ClassModifierContext.class,0);
		}
		public FieldModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldModifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitFieldModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldModifierContext fieldModifier() throws RecognitionException {
		FieldModifierContext _localctx = new FieldModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fieldModifier);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case T__103:
			case T__61:
			case T__32:
			case T__28:
				enterOuterAlt(_localctx, 1);
				{
				setState(148); classModifier();
				}
				break;
			case T__96:
				enterOuterAlt(_localctx, 2);
				{
				setState(149); match(T__96);
				}
				break;
			case T__55:
				enterOuterAlt(_localctx, 3);
				{
				setState(150); match(T__55);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldNameContext extends ParserRuleContext {
		public PackageAndClassNameContext packageAndClassName() {
			return getRuleContext(PackageAndClassNameContext.class,0);
		}
		public FieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BytecodeVisitor ) return ((BytecodeVisitor<? extends T>)visitor).visitFieldName(this);
			else return visitor.visitChildren(this);
		}
	}
